--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/wlandau/tarchetypes/branch/master/graph/badge.svg?token=3T5DlLwUVl)](https://codecov.io/gh/wlandau/targets)
 [![zenodo](https://zenodo.org/badge/282774543.svg)](https://zenodo.org/badge/latestdoi/282774543)
 
-The `tarchetypes` R package is a collection of target and pipeline archetypes for the [`targets`](https://github.com/wlandau/targets) package. These archetypes are shorthand that makes it easier to read and write pipelines.
+The `tarchetypes` R package is a collection of target and pipeline archetypes for the [`targets`](https://github.com/wlandau/targets) package. These archetypes express complicated pipelines with concise syntax, which enhances readability and thus reproducibility. Archetypes are possible because of the flexible metaprogramming capabilities of [`targets`](https://github.com/wlandau/targets). In [`targets`](https://github.com/wlandau/targets), one can define a target as an object outside the central pipeline, and the [`tar_target_raw()`](https://wlandau.github.io/targets/reference/tar_target_raw.html) function completely avoids non-standard evaluation. That means anyone can write their own niche interfaces for specialized projects. `tarchetypes` aims to include the most common and versatile archetypes and usage patterns.
 
 ## Target archetype example
 
