Change master to main

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 [![status](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![check](https://github.com/wlandau/tarchetypes/workflows/check/badge.svg)](https://github.com/wlandau/tarchetypes/actions?query=workflow%3Acheck)
 [![lint](https://github.com/wlandau/tarchetypes/workflows/lint/badge.svg)](https://github.com/wlandau/tarchetypes/actions?query=workflow%3Alint)
-[![codecov](https://codecov.io/gh/wlandau/tarchetypes/branch/master/graph/badge.svg?token=3T5DlLwUVl)](https://codecov.io/gh/wlandau/targets)
+[![codecov](https://codecov.io/gh/wlandau/tarchetypes/branch/main/graph/badge.svg?token=3T5DlLwUVl)](https://codecov.io/gh/wlandau/targets)
 [![zenodo](https://zenodo.org/badge/282774543.svg)](https://zenodo.org/badge/latestdoi/282774543)
 
 The `tarchetypes` R package is a collection of target and pipeline archetypes for the [`targets`](https://github.com/wlandau/targets) package. These archetypes express complicated pipelines with concise syntax, which enhances readability and thus reproducibility. Archetypes are possible because of the flexible metaprogramming capabilities of [`targets`](https://github.com/wlandau/targets). In [`targets`](https://github.com/wlandau/targets), one can define a target as an object outside the central pipeline, and the [`tar_target_raw()`](https://wlandau.github.io/targets/reference/tar_target_raw.html) function completely avoids non-standard evaluation. That means anyone can write their own niche interfaces for specialized projects. `tarchetypes` aims to include the most common and versatile archetypes and usage patterns.
@@ -69,7 +69,7 @@ tar_pipeline(
     # Track the input and output files.
     format = "file",
     # Avoid building small reports on HPC.
-    deployment = "master"
+    deployment = "main"
   )
 )
 ```
@@ -159,4 +159,4 @@ The following examples use the `tar_render()` archetype in pipelines.
 
 ## Participation
 
-Development is a community effort, and we welcome discussion and contribution. By participating in this project, you agree to abide by the [code of conduct](https://github.com/wlandau/tarchetypes/blob/master/CODE_OF_CONDUCT.md) and the [contributing guide](https://github.com/wlandau/tarchetypes/blob/master/CONTRIBUTING.md).
+Development is a community effort, and we welcome discussion and contribution. By participating in this project, you agree to abide by the [code of conduct](https://github.com/wlandau/tarchetypes/blob/main/CODE_OF_CONDUCT.md) and the [contributing guide](https://github.com/wlandau/tarchetypes/blob/main/CONTRIBUTING.md).
