--- a/README.Rmd
+++ b/README.Rmd
@@ -117,13 +117,8 @@ tar_pipeline(
 With [`tar_plan()`](https://wlandau.github.io/tarchetypes/reference/tar_plan.html), the simplest targets become super easy to write.
 
 ```{r, eval = FALSE}
-tar_pipeline(
-  # Needs tar_target() because of format = "file":
-  tar_target(
-    raw_data_file,
-    "data/raw_data.csv",
-    format = "file"
-  ),
+tar_plan(
+  tar_file(raw_data_file, "data/raw_data.csv", format = "file"),
   # Simple drake-like syntax:
   raw_data = read_csv(raw_data_file, col_types = cols()),
   data =raw_data %>%
