Unnest tar_plan() list

--- a/README.Rmd
+++ b/README.Rmd
@@ -93,11 +93,11 @@ Above, `tar_render()` scans code chunks for mentions of targets in `tar_load()` 
 
 ## Pipeline archetype example
 
-[`tar_commands()`](https://wlandau.github.io/tarchetypes/reference/tar_commands.html) is a drop-in replacement for [`drake_plan()`](https://docs.ropensci.org/drake/reference/drake_plan.html) in the [`targets`](https://github.com/wlandau/targets) ecosystem. 
+[`tar_plan()`](https://wlandau.github.io/tarchetypes/reference/tar_plan.html) is a drop-in replacement for [`drake_plan()`](https://docs.ropensci.org/drake/reference/drake_plan.html) in the [`targets`](https://github.com/wlandau/targets) ecosystem. 
 It lets users write targets as name/command pairs without having to call [`tar_target()`](https://wlandau.github.io/tarchetypes/reference/tar_target.html).
 
 ```{r, eval = FALSE}
-tar_commands(
+tar_plan(
   tar_file(raw_data_file, "data/raw_data.csv", format = "file"),
   # Simple drake-like syntax:
   raw_data = read_csv(raw_data_file, col_types = cols()),
